--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -16,6 +16,7 @@ page{
 	height:76rpx;
 	border-radius:10rpx;
 	background: center no-repeat/cover;
+	position: relative;
 }
 .rightinfo{
 	flex: 1;
@@ -35,7 +36,7 @@ page{
 	font-weight:500;
 	color:rgba(51,51,51,1);
 	line-height:40rpx;
-	max-width:400rpx; 
+	max-width:350rpx; 
 }
 .useinfo{
 	font-size:26rpx;
@@ -56,4 +57,19 @@ page{
 }
 .list>.items:last-child>.rightinfo{
 	border-bottom: 0;
+}
+.nums{
+	padding: 0 5rpx;
+	min-width: 25rpx;
+	height: 30rpx;
+	border-radius:15rpx; 
+	position: absolute;
+	right: -20%;
+	top: -10rpx;
+	background-color:rgba(255,0,0, .8); 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 24rpx;
+	color: white;
 }
