--- a/pages/take/dealers/dealers.wxss
+++ b/pages/take/dealers/dealers.wxss
@@ -14,6 +14,7 @@
 	font-family:PingFang SC;
 	font-weight:500;
 	color:rgba(51,51,51,1);
+	width: 500rpx;
 }
 .txt2{
 	font-size:24rpx;
@@ -32,7 +33,8 @@
 }
 .deList{
 	width: 694rpx;
-	height: 278rpx;
+	height: auto;
+	padding-bottom: 30rpx;
 	margin: 0 auto;
 	display: flex;
 	align-items: center;
