--- a/pages/take/takeDel/takeDel.wxss
+++ b/pages/take/takeDel/takeDel.wxss
@@ -33,12 +33,20 @@ page{
 }
 .r_info{
 	flex: 1;
+	padding-left: 25rpx;
+	box-sizing: border-box;
+}
+.r_info2{
+	display: flex;
+	justify-content: flex-end;
+	margin-right: 25rpx;
 }
 .setwidth{
-	max-width: 600rpx;
+	width: 400rpx;
+	height: auto;
 }
 .l_info{
-	width:484rpx;
+	max-width:484rpx;
 	background:rgba(0,59,115,1);
 	opacity:0.8;
 	border-radius:40rpx 0rpx 40rpx 40rpx;
@@ -49,7 +57,11 @@ page{
 	line-height:40rpx;
 	padding: 27rpx 35rpx;
 	box-sizing: border-box;
-	margin-right: 25rpx;
+	margin-left: 25rpx;
+	word-break: break-all;
+}
+.l_info2{
+	border-radius:0rpx 40rpx 40rpx 40rpx;
 }
 .r_img{
 	width:76rpx;
@@ -91,6 +103,11 @@ page{
 	position: absolute;
 	right: 0;
 	top: 50%;
+	
+}
+.zhanwei{
+	width: 100%;
+	height: 110rpx;
 }
 .footbox{
 	width: 100%;
@@ -123,4 +140,20 @@ page{
 	height:63rpx;
 	background:rgba(246,247,247,1);
 	border-radius:6rpx;
+}
+.imgpop{
+	width: 100vw;
+	height: 100vh;
+	background-color: rgba(0, 0, 0, 0.6);
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 9;
+}
+.bigimg{
+	width: 100%;
+	height: auto;
+}
+.infobox{
+	padding-top: 37rpx;
 }
