--- a/pages/take/takeHome/takeHome.wxss
+++ b/pages/take/takeHome/takeHome.wxss
@@ -55,8 +55,8 @@ page{
 	color:rgba(51,51,51,1);
 }
 .txt2{
-	width:120rpx;
-	height:42rpx;
+	/* width:120rpx;
+	height:42rpx; */
 	background:rgba(0,33,107,1);
 	border-radius:10rpx;
 	margin-left: 16rpx;
@@ -67,6 +67,7 @@ page{
 	font-family:PingFang SC;
 	font-weight:500;
 	color:rgba(255,255,255,1);
+	padding: 10rpx 13rpx;
 }
 .cg_btn{
 	display: flex;
@@ -272,4 +273,13 @@ page{
 	color:rgba(51,51,51,1);
 	border-top: 1rpx solid rgba(220,220,220,1);
 	margin-top: 56rpx;
+}
+.cell{
+	position: absolute;
+	left: 50%;
+	transform: translateX(-50%);
+	top: -20rpx;
+	opacity: 0;
+	z-index: 9;
+	/* width: 100%; */
 }
