--- a/app.wxss
+++ b/app.wxss
@@ -2,6 +2,7 @@
 @import "assets/css/animate.min.wxss";
 @import "assets/css/publics.wxss";
 @import "assets/css/font-icon.wxss";
+@import "assets/css/iconfont.wxss";
 .body,.container{height:100vh;}
 .titles{padding:20rpx 40rpx;border:1rpx solid #333;border-radius: 10rpx;}
 .titles2{margin:20rpx 0;border:1rpx solid #666;padding:10rpx 0;width:240rpx;text-align: center;}
