--- a/pages/take/takeDel/takeDel.wxss
+++ b/pages/take/takeDel/takeDel.wxss
@@ -19,6 +19,10 @@ page{
 	padding-left: 28rpx;
 	box-sizing: border-box;
 	padding-bottom: 37rpx;
+	/* position: relative; */
+}
+.l_info,.r_info{
+	position: relative;
 }
 .rightinfo{
 	padding-left: 0;
@@ -157,3 +161,25 @@ page{
 .infobox{
 	padding-top: 37rpx;
 }
+.ipxbox{
+	width: 100%;
+	height: 30rpx;
+	background-color: white;
+	position: fixed;
+	left: 0;
+	bottom: 0;
+	z-index: 99;
+}
+.setbom{
+	bottom: 30rpx;
+}
+.loadingicon{
+	width: 50rpx;
+	height: auto;
+	position: absolute;
+	left: -60rpx;
+	top: 50%;
+	transform: translateY(-50%);
+	z-index: 9;
+}
+
